Copyright (c) 2002-2006 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  1.5.8 (unreleased)

    Bugs fixed

      - User settings screen did not work when user did not have
        sufficient rights in the Silva Root. This is now fixed.

  1.5.7

    Features added

      - Added a ReferenceLookupWindowField, to store references to zope
        objects instead of urls.

      - Much i18n polishing

      - Removed commented out template code for listing all email addresses

      - GhostFolders (and probably also Ghosts) could mess up
        SilvaLayout if they referred to a location with a different
        skin setting than the location in which the GhostFolder is
        accessed (even when just looking at its title). This has now
        been fixed.

    Bugs fixed
  
      - Fixed problem in SilvaDocument that used kupu where it whasn't needed 
        and caused js exceptions
      
      - Fix for issue 1618 where messagebox didn't appear in ie also removed 
        nbsp in macro_index
  
      - Fixed issues where hide_from_toc filters wouldn't work in ghost contexts. 
        Also removed some unused cruft from previous filtering implementations.

      - Fixed issue 1608 where tab_edit_revoke_approval caused versioning errors
  
      - In the tab_status "set timings" caused an error without saving the 
        changes and returned a wrong tab
          
  1.5.6

    Features added

      - Made image titles required, since they provide the alt attribute, as 
        requested by two customers.

    Bugs fixed

      - Fixed bug in sidebar uplinks where you couldn't jump up and out of a 
        publication.

      - Fixed hover bug in sidebar uplinks.

      - XML export rewrote the urls of links and images on export, which
        was a bad thing. They now have extra rewritten_ attributes, which
        are only used by the xslt rendering.      
      
      - XML export of Silvadocuments with images that have no link attribute